# elmpresentation

./: elm-package.json
elm-servant/: README.md  elm-servant.cabal
elm-servant/app/: Main.hs
elm-servant/src/: Lib.hs
ng2/elm-in-ng2/: README.md  angular-cli.json  package.json
ng2/elm-in-ng2/e2e/: app.e2e-spec.ts  app.po.ts
ng2/elm-in-ng2/src/: index.html
ng2/elm-in-ng2/src/app/: app.component.ts  app.module.ts  elm.js
src/: Main.elm  Todo.elm
