name:                elm-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/elm-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Werror -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , classy-prelude
                     , servant-server
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

executable elm-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Werror -Wall -O2
  build-depends:       base
                     , elm-servant
                     , aeson
                     , classy-prelude
                     , servant-server
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite elm-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elm-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elm-servant
